src/objects/Translation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ügyfél</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>@DEPR Teljesítési státusz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nyitva</fullName>
                </value>
                <value>
                    <fullName>Fordítónak kiadva</fullName>
                </value>
                <value>
                    <fullName>Lektornak kiadva</fullName>
                </value>
                <value>
                    <fullName>Megrendelőnek leszállítva</fullName>
                </value>
                <value>
                    <fullName>Visszautasítva</fullName>
                </value>
                <value>
                    <fullName>Megrendelés törölve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is not a Branch-Account record.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Translations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hitelesítve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Proofreading__c</fullName>
        <defaultValue>true</defaultValue>
        <label>@DEPR Lektorálás esetén van felár</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Urgent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>@DEPR Sürgős/expressz esetén van felár</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kapcsolattartó</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_EUR_To_HUF__c</fullName>
        <label>Jelenlegi EUR Árfolyam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Amount__c</fullName>
        <label>Customer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>@DEPR Megrendelői státusz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nyitva</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Visszavonva</fullName>
                </value>
                <value>
                    <fullName>Elutasítva</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Előleg Dátum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment_Type__c</fullName>
        <label>Előleg Fizetési Módja</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Utalás</fullName>
                </value>
                <value>
                    <fullName>Bankkártya</fullName>
                </value>
                <value>
                    <fullName>Készpénz</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Előleg</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Határidő</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Editing_Status__c</fullName>
        <label>@DEPR Editing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Záradékolva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Count__c</fullName>
        <label>Az ajánlat alapját képező mennyiség</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Due_Date__c</fullName>
        <label>Normál határidővel kész ekkor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Price__c</fullName>
        <formula>Estimated_Price__c * 1.27</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bruttó ajánlati ár</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Price_Eur__c</fullName>
        <label>Nettó ajánlati ár EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Price__c</fullName>
        <label>Nettó ajánlati ár</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Units__c</fullName>
        <label>Mennyiség</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>szóközzel növelt karakter</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>forrásnyelvi szó</fullName>
                </value>
                <value>
                    <fullName>characters</fullName>
                </value>
                <value>
                    <fullName>words</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>@DEPR Expressz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Szakterület</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGR</fullName>
                </value>
                <value>
                    <fullName>BIZT</fullName>
                </value>
                <value>
                    <fullName>ELEKTR</fullName>
                </value>
                <value>
                    <fullName>ÉLELM</fullName>
                </value>
                <value>
                    <fullName>ENERG</fullName>
                </value>
                <value>
                    <fullName>ÉPIP</fullName>
                </value>
                <value>
                    <fullName>EÜ</fullName>
                </value>
                <value>
                    <fullName>PÜ</fullName>
                </value>
                <value>
                    <fullName>GAZD</fullName>
                </value>
                <value>
                    <fullName>GÉPIP</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JOG</fullName>
                </value>
                <value>
                    <fullName>KÖRNY</fullName>
                </value>
                <value>
                    <fullName>KÖZL</fullName>
                </value>
                <value>
                    <fullName>KULT</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SZÁLL</fullName>
                </value>
                <value>
                    <fullName>OKIRAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>@DEPR Számla státusz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nyitott</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Számlázandó</fullName>
                </value>
                <value>
                    <fullName>Számlázva</fullName>
                </value>
                <value>
                    <fullName>Fizetve</fullName>
                </value>
                <value>
                    <fullName>Törölve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iroda__c</fullName>
        <inlineHelpText>Itt válasszátok ki, melyik irodához tartozik a megrendelés. A Branch mezővel ne foglalkozzatok.</inlineHelpText>
        <label>Iroda</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Miskolc</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Debrecen)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Győr)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Kecskemét)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Pécs)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Sopron)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Szeged)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Székesfehérvár)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Szombathely)</fullName>
                </value>
                <value>
                    <fullName>Miskolc (Veszprém)</fullName>
                </value>
                <value>
                    <fullName>Debrecen</fullName>
                </value>
                <value>
                    <fullName>Győr</fullName>
                </value>
                <value>
                    <fullName>Kecskemét</fullName>
                </value>
                <value>
                    <fullName>Pécs</fullName>
                </value>
                <value>
                    <fullName>Sopron</fullName>
                </value>
                <value>
                    <fullName>Szeged</fullName>
                </value>
                <value>
                    <fullName>Székesfehérvár</fullName>
                </value>
                <value>
                    <fullName>Szombathely</fullName>
                </value>
                <value>
                    <fullName>Veszprém</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kalkulacios_bazis__c</fullName>
        <inlineHelpText>Itt válaszd ki, hogy milyen alapon számítottad ki az ajánlati árat.</inlineHelpText>
        <label>Kalkulációs bázis</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Magyar_dijszabas</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Nemzetkozi_dijszabas</fullName>
                </value>
                <value>
                    <fullName>Alvallalkozoi_arajanlat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Akkor jelöld be, ha az ajánlatádásnál végleges vállalási árat adsz meg, ami független a fordítás tényleges mennyiségétől.</inlineHelpText>
        <label>@DEPR Az ajánlati ár végleges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Status__c</fullName>
        <label>@DEPR Projektvezetői státusz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nyitva</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Módosítva</fullName>
                </value>
                <value>
                    <fullName>Megrendelés elutasítva</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Megnevez_s__c</fullName>
        <label>A fordítandó dokumentum megnevezése</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Native_Language_Proofreading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anyanyelvi lektorálással</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Megrendelési státusz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Megrendelve</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fordítás folyamatban</fullName>
                </value>
                <value>
                    <fullName>Fordítás kész</fullName>
                </value>
                <value>
                    <fullName>Lektorálás folyamatban</fullName>
                </value>
                <value>
                    <fullName>Lektorálás kész</fullName>
                </value>
                <value>
                    <fullName>Megrendelőnek leszállítva</fullName>
                </value>
                <value>
                    <fullName>Megrendelés visszavonva</fullName>
                </value>
                <value>
                    <fullName>Megrendelés kifogásolva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Fizetés Dátuma</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Pénzügyi státusz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Előleg fizetve</fullName>
                </value>
                <value>
                    <fullName>Még nem számlázható</fullName>
                </value>
                <value>
                    <fullName>Leszámlázva</fullName>
                </value>
                <value>
                    <fullName>Fizetve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Fizetés Módja</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Utalás</fullName>
                </value>
                <value>
                    <fullName>Bankkártya</fullName>
                </value>
                <value>
                    <fullName>Készpénz</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Based__c</fullName>
        <label>Elszámolási egység</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Estimated_Price__c -  Translator_Wage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nettó árrés</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Akkor töltsd ki ezt a rovatot, ha a szóban forgó megrendelés egy több megrendelésből álló projekt részét képezi.</inlineHelpText>
        <label>Projekt</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proofreading_Date__c</fullName>
        <label>Proofreading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proofreading_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Akkor kell bejelölni, ha a megrendelés idegen fordítás vagy magyar szöveg lektorálására szól, fordítás nélkül.</inlineHelpText>
        <label>Csak lektorálást kér</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proofreading_Status__c</fullName>
        <label>@DEPR Proofreading Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proofreading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lektorálva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Alkalmazott díjszabás</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HU</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No translators available</fullName>
                </value>
                <value>
                    <fullName>Not expensive enough</fullName>
                </value>
                <value>
                    <fullName>Too much text</fullName>
                </value>
                <value>
                    <fullName>Unable to complete in deadline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollup_Assignments__c</fullName>
        <label>Rollup Assignments</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sample_Text__c</fullName>
        <label>Sample Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Language_Name__c</fullName>
        <formula>Source_Language__r.Name</formula>
        <label>Source Language Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forrásnyelv</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Translations_By_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervising_Status__c</fullName>
        <label>@DEPR Supervising Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Language_Name__c</fullName>
        <formula>Target_Language__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Language Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Célnyelv</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Translations_By_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Translating_Status__c</fullName>
        <label>@DEPR Translating Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translator_Wage__c</fullName>
        <label>Nettó alvállalkozói díj</label>
        <summarizedField>Translation_Assignment__c.Translator_Price__c</summarizedField>
        <summaryForeignKey>Translation_Assignment__c.Translation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>@DEPR Sürgős</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Megrendelés</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Approval_Date__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Profit__c</columns>
        <columns>Iroda__c</columns>
        <filterScope>Everything</filterScope>
        <label>Összes</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assignment_Status__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Estimated_Count__c</columns>
        <columns>Estimated_Units__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Region__c</columns>
        <columns>Invoice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned</label>
    </listViews>
    <listViews>
        <fullName>Due_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assignment_Status__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Estimated_Count__c</columns>
        <columns>Estimated_Units__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Due This Week</label>
    </listViews>
    <listViews>
        <fullName>Due_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assignment_Status__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Estimated_Count__c</columns>
        <columns>Estimated_Units__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Region__c</columns>
        <columns>Invoice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Due Today</label>
    </listViews>
    <listViews>
        <fullName>Due_Tomorrow</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assignment_Status__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Estimated_Count__c</columns>
        <columns>Estimated_Units__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Due Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>Gyor</fullName>
        <columns>NAME</columns>
        <columns>Approval_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Profit__c</columns>
        <columns>Iroda__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Iroda__c</field>
            <operation>contains</operation>
            <value>Miskolc (Győr),Győr</value>
        </filters>
        <label>Győr</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>Osszes_Kepviselet</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Approval_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Profit__c</columns>
        <columns>Iroda__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Iroda__c</field>
            <operation>contains</operation>
            <value>,Miskolc (Debrecen),Miskolc (Győr),Miskolc (Kecskemét),Miskolc (Pécs)</value>
        </filters>
        <filters>
            <field>Iroda__c</field>
            <operation>contains</operation>
            <value>Miskolc (Sopron),Miskolc (Szeged),Miskolc (Székesfehérvár)</value>
        </filters>
        <filters>
            <field>Iroda__c</field>
            <operation>contains</operation>
            <value>Miskolc (Szombathely),Miskolc (Veszprém),Debrecen,Győr,Kecskemét,Pécs</value>
        </filters>
        <filters>
            <field>Iroda__c</field>
            <operation>contains</operation>
            <value>Sopron,Szeged,Székesfehérvár,Szombathely,Veszprém</value>
        </filters>
        <label>Összes Képviselet</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>Osszes_Miskolc</fullName>
        <columns>NAME</columns>
        <columns>Approval_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Profit__c</columns>
        <columns>Iroda__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Iroda__c</field>
            <operation>equals</operation>
            <value>Miskolc</value>
        </filters>
        <label>Összes Miskolc</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>Osszes_Pest</fullName>
        <columns>NAME</columns>
        <columns>Approval_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Profit__c</columns>
        <columns>Iroda__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Iroda__c</field>
            <operation>equals</operation>
            <value>Budapest</value>
        </filters>
        <label>Összes Pest</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>To_be_Invoiced</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assignment_Status__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>Estimated_Count__c</columns>
        <columns>Estimated_Units__c</columns>
        <columns>Estimated_Price__c</columns>
        <columns>Region__c</columns>
        <columns>Invoice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>To be Invoiced</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>A megrendelés száma</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Megrendelések</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_be_Express_and_Urgent</fullName>
        <active>true</active>
        <description>A translation can&apos;t be both Express and Urgent</description>
        <errorConditionFormula>Express__c &amp;&amp; Urgent__c</errorConditionFormula>
        <errorMessage>A translation can&apos;t be Express and Urgent at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Rule_Should_Be_Selected</fullName>
        <active>true</active>
        <description>If rejected, a reason should be selected</description>
        <errorConditionFormula>ISPICKVAL(Rejection_Reason__c, &apos;&apos;) &amp;&amp; ISPICKVAL( Manager_Status__c, &apos;Rejected&apos;)</errorConditionFormula>
        <errorDisplayField>Manager_Status__c</errorDisplayField>
        <errorMessage>Please select a Rejection Reason.</errorMessage>
    </validationRules>
</CustomObject>